log
Fri Mar 27 05:46:48 PM UTC 2026: 
 list.c | 10 ++++++++++
 1 file changed, 10 insertions(+)
 tests:  0|6
total_score: 0/60
9ede7f1
Fri Mar 27 05:50:22 PM UTC 2026: 
 list.c | 11 +++++++++--
 1 file changed, 9 insertions(+), 2 deletions(-)
 tests:  0|6
total_score: 0/60
0e48c95
Fri Mar 27 05:52:39 PM UTC 2026: 
 list.c | 2 +-
 1 file changed, 1 insertion(+), 1 deletion(-)
Compilation failed
In file included from test.c:5:
list.c: In function ‘pushCurrent’:
list.c:81:20: error: ‘tail’ undeclared (first use in this function)
   81 |     if (current == tail)
      |                    ^~~~
list.c:81:20: note: each undeclared identifier is reported only once for each function it appears in
47f8346
